--- a/code/hyperparameter-tuning.Rmd
+++ b/code/hyperparameter-tuning.Rmd
@@ -5,7 +5,6 @@ date: "2023-09-01"
 ---
 
 ## Prepare Packages
-
 ```{r warning=FALSE, echo=FALSE}
 here::i_am("code/hyperparameter-tuning.Rmd")
 
@@ -28,24 +27,24 @@ set.seed(313)
 
 ```{r}
 #Load dataset
-HUC_Data <- read_csv(here("data/HUC_GaugeData_FULL.csv"))
+GW_Data <- read_csv(here("data/GWBasins_GaugeData_FULL.csv"))
 
-HUC_Data$KEY <- paste(HUC_Data$SITENUM, HUC_Data$YEAR, sep = "_")
+GW_Data$KEY <- paste(GW_Data$SITENUM, GW_Data$YEAR, sep = "_")
 
 # Move KEY column to first
-HUC_Data <- HUC_Data[,c(53,1:52)]
-HUC_Data <- HUC_Data[,-3] #remove site numbers
+GW_Data <- GW_Data[,c(53,1:52)]
+GW_Data <- GW_Data[,-3] #remove site numbers
 
 #Log transform BFI; forces BFI between 0-1
-HUC_Data$BFI_log <- logit(HUC_Data$BFI)
+GW_Data$BFI_log <- logit(GW_Data$BFI)
 
 #Rearrange columns
-HUC_Data <- HUC_Data[,c(1,4:6,53,2:3,7:52)]
+GW_Data <- GW_Data[,c(1,4:6,53,2:3,7:52)]
 ```
 
 ## Hyperparameter Tuning for HUC8 Data
 
-Takes \~ 1hr to run
+Takes \~ 1.5 hrs to run
 
 ```{r warning=FALSE}
 nrounds = 1000
@@ -56,13 +55,13 @@ tune_grid <- expand.grid(
   max_depth = c(4, 5, 6),
   gamma = c(0, 0.05, 0.1),
   colsample_bytree = 1,
-  min_child_weight = c(1, 2, 3),
+  min_child_weight = c(1, 2, 3, 4, 5),
   subsample = 1
 )
 
 start.time <- Sys.time()
-xgb_caret <- train(x = HUC_Data[,8:53],
-                   y = HUC_Data$BFI_log,
+xgb_caret <- train(x = GW_Data[,8:53],
+                   y = GW_Data$BFI_log,
                    method = "xgbTree",
                    trControl = trainControl(
                                     method = "cv", 
@@ -79,5 +78,5 @@ time.taken
 
 ### Final Best Hyperparameters:
 
-nrounds = 1000, max_depth = 6, eta = 0.05, gamma = 0, colsample_bytree =
-1, min_child_weight = 3, subsample = 1
+nrounds = 1000, max_depth = 6, eta = 0.05, gamma = 0.05, colsample_bytree =
+1, min_child_weight = 5, subsample = 1
